updated combo code with team 2

--- a/monsters_dataframe.ipynb
+++ b/monsters_dataframe.ipynb
@@ -2902,7 +2902,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 102,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2924,12 +2924,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [],
    "source": [
     "from itertools import combinations\n",
-    "def check_all_combos(df):\n",
+    "def check_all_combos(df,team):\n",
     "    combos = ['firstbaron','firstdragon','firstinhibitor','firstblood','firsttower','firstriftherald']\n",
     "    comb = combinations(['firstbaron','firstdragon','firstinhibitor','firstblood','firsttower','firstriftherald'], 2)\n",
     "    for i in list(comb):\n",
@@ -2939,13 +2939,15 @@
     "        third = not_comb[2]\n",
     "        fourth = not_comb[3]\n",
     "        j,k = i\n",
-    "        two_combo_winrate(df_earlygame,1,j,k,first,second,third,fourth,'winner')"
+    "        two_combo_winrate(df_earlygame,team,j,k,first,second,third,fourth,'winner')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
-   "metadata": {},
+   "execution_count": 104,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -2985,7 +2987,53 @@
     }
    ],
    "source": [
-    "check_all_combos(df_earlygame)"
+    "check_all_combos(df_earlygame,1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "firstbaron/firstdragon\n",
+      "0.43523316062176165\n",
+      "firstbaron/firstinhibitor\n",
+      "0.903125\n",
+      "firstbaron/firstblood\n",
+      "0.29850746268656714\n",
+      "firstbaron/firsttower\n",
+      "0.29411764705882354\n",
+      "firstbaron/firstriftherald\n",
+      "0.2159090909090909\n",
+      "firstdragon/firstinhibitor\n",
+      "0.6551724137931034\n",
+      "firstdragon/firstblood\n",
+      "0.07507507507507508\n",
+      "firstdragon/firsttower\n",
+      "0.0755813953488372\n",
+      "firstdragon/firstriftherald\n",
+      "0.0966183574879227\n",
+      "firstinhibitor/firstblood\n",
+      "0.6103896103896104\n",
+      "firstinhibitor/firsttower\n",
+      "0.6621621621621622\n",
+      "firstinhibitor/firstriftherald\n",
+      "0.6415094339622641\n",
+      "firstblood/firsttower\n",
+      "0.06719367588932806\n",
+      "firstblood/firstriftherald\n",
+      "0.05928853754940711\n",
+      "firsttower/firstriftherald\n",
+      "0.034653465346534656\n"
+     ]
+    }
+   ],
+   "source": [
+    "check_all_combos(df_earlygame,2)"
    ]
   },
   {
@@ -2997,7 +3045,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 106,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3017,12 +3065,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 89,
+   "execution_count": 107,
    "metadata": {},
    "outputs": [],
    "source": [
     "from itertools import combinations\n",
-    "def check_all_combos_three(df):\n",
+    "def check_all_combos_three(df, team):\n",
     "    combos = ['firstbaron','firstdragon','firstinhibitor','firstblood','firsttower','firstriftherald']\n",
     "    comb = combinations(['firstbaron','firstdragon','firstinhibitor','firstblood','firsttower','firstriftherald'], 3)\n",
     "    for i in list(comb):\n",
@@ -3031,13 +3079,15 @@
     "        second = not_comb[1]\n",
     "        third = not_comb[2]\n",
     "        j,k,l = i\n",
-    "        three_combo_winrate(df_earlygame,1,j,k,l,first,second,third,'winner')"
+    "        three_combo_winrate(df_earlygame,team,j,k,l,first,second,third,'winner')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
-   "metadata": {},
+   "execution_count": 108,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -3087,12 +3137,68 @@
     }
    ],
    "source": [
-    "check_all_combos_three(df_earlygame)"
+    "check_all_combos_three(df_earlygame,1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 109,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "firstbaron/firstdragon/firstinhibitor\n",
+      "0.9152542372881356\n",
+      "firstbaron/firstdragon/firstblood\n",
+      "0.41379310344827586\n",
+      "firstbaron/firstdragon/firsttower\n",
+      "0.37735849056603776\n",
+      "firstbaron/firstdragon/firstriftherald\n",
+      "0.38144329896907214\n",
+      "firstbaron/firstinhibitor/firstblood\n",
+      "0.9012875536480687\n",
+      "firstbaron/firstinhibitor/firsttower\n",
+      "0.9020618556701031\n",
+      "firstbaron/firstinhibitor/firstriftherald\n",
+      "0.8775510204081632\n",
+      "firstbaron/firstblood/firsttower\n",
+      "0.3194444444444444\n",
+      "firstbaron/firstblood/firstriftherald\n",
+      "0.24193548387096775\n",
+      "firstbaron/firsttower/firstriftherald\n",
+      "0.20987654320987653\n",
+      "firstdragon/firstinhibitor/firstblood\n",
+      "0.7868852459016393\n",
+      "firstdragon/firstinhibitor/firsttower\n",
+      "0.6865671641791045\n",
+      "firstdragon/firstinhibitor/firstriftherald\n",
+      "0.582089552238806\n",
+      "firstdragon/firstblood/firsttower\n",
+      "0.11578947368421053\n",
+      "firstdragon/firstblood/firstriftherald\n",
+      "0.06521739130434782\n",
+      "firstdragon/firsttower/firstriftherald\n",
+      "0.09210526315789473\n",
+      "firstinhibitor/firstblood/firsttower\n",
+      "0.6923076923076923\n",
+      "firstinhibitor/firstblood/firstriftherald\n",
+      "0.6938775510204082\n",
+      "firstinhibitor/firsttower/firstriftherald\n",
+      "0.6966292134831461\n",
+      "firstblood/firsttower/firstriftherald\n",
+      "0.06639004149377593\n"
+     ]
+    }
+   ],
+   "source": [
+    "check_all_combos_three(df_earlygame,2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3112,12 +3218,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 111,
    "metadata": {},
    "outputs": [],
    "source": [
     "from itertools import combinations\n",
-    "def check_all_combos_four(df):\n",
+    "def check_all_combos_four(df,team):\n",
     "    combos = ['firstbaron','firstdragon','firstinhibitor','firstblood','firsttower','firstriftherald']\n",
     "    comb = combinations(['firstbaron','firstdragon','firstinhibitor','firstblood','firsttower','firstriftherald'], 4)\n",
     "    for i in list(comb):\n",
@@ -3125,12 +3231,12 @@
     "        first = not_comb[0]\n",
     "        second = not_comb[1]\n",
     "        j,k,l,m = i\n",
-    "        four_combo_winrate(df_earlygame,1,j,k,l,m,first,second,'winner')"
+    "        four_combo_winrate(df_earlygame,team,j,k,l,m,first,second,'winner')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 112,
    "metadata": {},
    "outputs": [
     {
@@ -3171,39 +3277,54 @@
     }
    ],
    "source": [
-    "check_all_combos_four(df_earlygame)"
+    "check_all_combos_four(df_earlygame,1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 114,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "firstbaron/firstdragon/firstinhibitor/firstblood\n",
+      "0.9152542372881356\n",
+      "firstbaron/firstdragon/firstinhibitor/firsttower\n",
+      "0.9152542372881356\n",
+      "firstbaron/firstdragon/firstinhibitor/firstriftherald\n",
+      "0.9152542372881356\n",
+      "firstbaron/firstdragon/firstblood/firsttower\n",
+      "0.41379310344827586\n",
+      "firstbaron/firstdragon/firstblood/firstriftherald\n",
+      "0.41379310344827586\n",
+      "firstbaron/firstdragon/firsttower/firstriftherald\n",
+      "0.37735849056603776\n",
+      "firstbaron/firstinhibitor/firstblood/firsttower\n",
+      "0.9012875536480687\n",
+      "firstbaron/firstinhibitor/firstblood/firstriftherald\n",
+      "0.9012875536480687\n",
+      "firstbaron/firstinhibitor/firsttower/firstriftherald\n",
+      "0.9020618556701031\n",
+      "firstbaron/firstblood/firsttower/firstriftherald\n",
+      "0.3194444444444444\n",
+      "firstdragon/firstinhibitor/firstblood/firsttower\n",
+      "0.7868852459016393\n",
+      "firstdragon/firstinhibitor/firstblood/firstriftherald\n",
+      "0.7868852459016393\n",
+      "firstdragon/firstinhibitor/firsttower/firstriftherald\n",
+      "0.6865671641791045\n",
+      "firstdragon/firstblood/firsttower/firstriftherald\n",
+      "0.11578947368421053\n",
+      "firstinhibitor/firstblood/firsttower/firstriftherald\n",
+      "0.6923076923076923\n"
+     ]
+    }
+   ],
    "source": [
-    "def five_combo_winrate(df,team,feat1,feat2,feat3,feat4,feat5,target):\n",
-    "    counter = 0\n",
-    "    for index,row in df.iterrows():\n",
-    "        if row[feat1] == team and row[feat2] == team and row[feat3] == team and row[feat4] == team\\\n",
-    "        and row[feat5] == team and row[target] == team:\n",
-    "            counter += 1\n",
-    "    return counter/len(df[df[target] == team])"
+    "check_all_combos_four(df_earlygame,2)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "five_combo_winrate(df_earlygame,1,'firstblood','firstbaron','firsttower','firstdragon','firstinhibitor','winner')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
